# vinhobot

./: LICENSE  README.md  app.py  ingest.py  pyproject.toml
.chainlit/: config.toml
.chainlit/translations/: pt-PT.json
compose/: .env  compose.yml  servers.json
compose/init-db/: init-db.sql
compose/init-db/1-schema/: config.sql  functions.sql  indexes.sql  schema.sql  types.sql  views.sql
compose/init-db/1-schema/core/: appellations.sql  distributors.sql  grapes.sql  pairing_categories.sql  producers.sql  regions.sql  soils.sql  sources.sql  vendors.sql  winemakers.sql
compose/init-db/1-schema/dependent/: pairings.sql  sub_regions.sql  wine_distributors.sql  wine_grapes.sql  wine_offers.sql  wine_pairings.sql  wine_references.sql  wine_soils.sql  wine_winemakers.sql  wines.sql
compose/init-db/2-data/core/: appellations.sql  distributors.sql  grapes.sql  pairing_categories.sql  producers.sql  regions.sql  soils.sql  sources.sql  vendors.sql  winemakers.sql
compose/init-db/2-data/dependent/: pairings.sql  sub_regions.sql  wine_distributors.sql  wine_pink.sql  wine_pink_grapes.sql  wine_pink_offers.sql  wine_pink_pairings.sql  wine_pink_references.sql  wine_pink_soils.sql  wine_pink_winemakers.sql  wine_red.sql  wine_red_grapes.sql  wine_red_offers.sql  wine_red_pairings.sql  wine_red_references.sql  wine_red_soils.sql  wine_red_winemakers.sql  wine_white.sql  wine_white_grapes.sql  wine_white_offers.sql  wine_white_pairings.sql  wine_white_references.sql  wine_white_soils.sql  wine_white_winemakers.sql
